# cli-todo

./: .gitignore  AGENTS.local.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-01-cli-update-feature.md
docs/superpowers/specs/: 2026-03-26-cli-todo-design.md  2026-04-01-cli-update-feature-design.md
src/todo/: __init__.py  cli.py  config.py  models.py  project.py  renderer.py  store.py  sync.py  updater.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_project.py  test_renderer.py  test_store.py  test_updater.py
